gcc/testsuite/algol68/compile/mcgt-7.1.3a.a68
# { dg-options "-fstropping=upper" }  #

# Transient references and declarations.  #
BEGIN FLEX[4,6]INT p;
      # Illegal.  p cannot be deflexed since it is a REF FLEX.  #
      REF[,]INT q3 = p; # { dg-error "" }  #
      SKIP
END
